Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • gnome-shell gnome-shell
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 2.1k
    • Issues 2.1k
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 165
    • Merge requests 165
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Artifacts
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
    • Model experiments
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • gnome-shellgnome-shell
  • Issues
  • #6528

gnome-shell segfault in g_strsplit() on RISC-V

gnome-shell 44.rc segfault in g_strsplit() on RISC-V:

Program terminated with signal SIGSEGV, Segmentation fault.
#0 __GI_strchr (s=s@entry=0x13ea <error: Cannot access memory at address 0x13ea>, c_in=c_in@entry=58) at ./string/strchr.c:47
#1 0x0000003f9dd4891e in __GI_strstr (haystack=0x13ea <error: Cannot access memory at address 0x13ea>, needle=0x2ae7f53538 ":") at ./string/strstr.c:84
#2 0x0000003f9e213314 in g_strsplit () from /lib/riscv64-linux-gnu/libglib-2.0.so.0
#3 0x0000002ae7f5303a in ?? ()

which we correctly guessed was coming from maybe_add_rpath_introspection_paths() so rebuilding without HAVE_EXE_INTROSPECTION seems to be a workaround.

Private bug: https://launchpad.net/bugs/2012068

Assignee
Assign to
Time tracking